Closed
Bug 671188
Opened 14 years ago
Closed 14 years ago
elfhack throws SIGSEG with gcc/arm 4.5.2 (Ubuntu 11.04)
Categories
(Firefox Build System :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla8
People
(Reporter: m_kato, Assigned: glandium)
References
(Depends on 1 open bug)
Details
Attachments
(1 file)
1.52 KB,
patch
|
taras.mozilla
:
review+
|
Details | Diff | Splinter Review |
GCC is gcc version 4.5.2 (Ubuntu/Linaro 4.5.2-8ubuntu3) (Ubuntu 11.04). Since section is null in do_relocation_section, elfhack will crash.
/home/makoto/Development/objdir-arm/dist/bin/libxul.so:
Program received signal SIGSEGV, Segmentation fault.
0x0804e0dc in ElfSection::getFlags() ()
(gdb) bt
#0 0x0804e0dc in ElfSection::getFlags() ()
#1 0x0805ae3c in int do_relocation_section<Elf_Rel>(Elf*, unsigned int, unsigned int) ()
#2 0x080583bd in do_file(char const*, bool) ()
#3 0x08058622 in main ()
Reporter | ||
Updated•14 years ago
|
Summary: elfhack throw SIGSEG with gcc/arm 4.5.1 → elfhack throws SIGSEG with gcc/arm 4.5.2 (Ubuntu 11.04)
Reporter | ||
Comment 1•14 years ago
|
||
Also, although libxul.so.bz2 is 117MB, can I attach it into this bug?
Reporter | ||
Comment 2•14 years ago
|
||
Oops libxul.so.bz2 is 7MB.
Assignee | ||
Comment 3•14 years ago
|
||
Please do ; or put it on some public (temporary) space.
Assignee | ||
Updated•14 years ago
|
Assignee: nobody → mh+mozilla
Reporter | ||
Comment 4•14 years ago
|
||
libxul (arm) ... http://www.wontfix.net/temp/libxul.so.bz2
elfhack (x86) ... http://www.wontfix.net/temp/elfhack.bz2
Assignee | ||
Comment 5•14 years ago
|
||
Your linker generates a weird relocation section... (or that could be gcc adding such relocations in some object files and ld keeping them around)
(...)
00ef439c 00000017 R_ARM_RELATIVE
00ef43b0 00000017 R_ARM_RELATIVE
00ef43c0 00000017 R_ARM_RELATIVE
00ef43c4 00000017 R_ARM_RELATIVE
00000000 00000000 R_ARM_NONE
00000000 00000000 R_ARM_NONE
00000000 00000000 R_ARM_NONE
00000000 00000000 R_ARM_NONE
00000000 00000000 R_ARM_NONE
00000000 00000000 R_ARM_NONE
00000000 00000000 R_ARM_NONE
00eb8700 00000011 R_ARM_TLS_DTPMOD3
00ebc904 00000011 R_ARM_TLS_DTPMOD3
00dd7400 00032b02 R_ARM_ABS32 00000000 __cxa_pure_virtual
00dd7404 00032b02 R_ARM_ABS32 00000000 __cxa_pure_virtual
00dd7408 00032b02 R_ARM_ABS32 00000000 __cxa_pure_virtual
00dd740c 00032b02 R_ARM_ABS32 00000000 __cxa_pure_virtual
(...)
Generally, there aren't empty fields like this...
Anyways, we'd better make elfhack resilient to this.
Assignee | ||
Comment 6•14 years ago
|
||
Attachment #545612 -
Flags: review?(tglek)
![]() |
||
Updated•14 years ago
|
Attachment #545612 -
Flags: review?(tglek) → review+
Assignee | ||
Comment 7•14 years ago
|
||
Assignee | ||
Comment 8•14 years ago
|
||
Whiteboard: [inbound]
Comment 9•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
Assignee | ||
Comment 10•14 years ago
|
||
Kato-san, the relocations you get are wrong and an actual LD bug: http://sourceware.org/bugzilla/show_bug.cgi?id=13049 which will lead to a crash on startup on your build, with or without elfhack. You want to look at bug 675618 for a workaround.
Updated•8 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•