Bug 671188 - Don't fail on R_*_NONE relocations with an empty r_offset. r=tglek